# riscv_parameter_extraction

./: .gitignore  README.md  analysis.md  compare_results.py  pyproject.toml  requirements.txt
output_OSM/: deepseek_r1-snippet_1.yaml  llama_3.1-snippet_1.yaml  llama_3.1-snippet_2.yaml  qwen_2.5-snippet_1.yaml  qwen_2.5-snippet_2.yaml
outputs_one_shot/: claude_4.5-snippet_1.yaml  claude_4.5-snippet_2.yaml  gemini_3flash-snippet_1.yaml  gemini_3flash-snippet_2.yaml  gemini_3pro-snippet_1.yaml  gemini_3pro-snippet_2.yaml  gpt_5_snippet_1.yaml  gpt_5_snippet_2.yaml  grok_4.1-snippet_1.yaml  grok_4.1-snippet_2.yaml
prompts/: system_prompt_1.txt  user_prompt_1.txt  user_prompt_2.txt
snippets/: snippet_1.txt  snippet_2.txt
src/one_shot/: run_one_shot.py
src/rag/: config.py  evaluator.py  llm_processor.py  main.py  rag_engine.py  schema_loader.py  test_pipeline.py  vector_store.py  yaml_generator.py
src/rag/docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  USAGE_EXAMPLE.md
src/utils/: analyse_yaml_outputs.py  extract_schema_keys.py
visualizations_open_source/: analysis_results.csv
visualizations_propriatary/: analysis_results.csv
